--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/server.js"
+    }
   ]
 }
